# ptools

itrust/: hosts.ini  itrust.py  requirements.txt
luning/missingjs/luning/: main.py  paths.py  services.py
luning/templates/: mysql.template.yaml  pg.template.yaml  redis.template.yaml
serv-by-docker/: docks  readme.md
serv-by-docker/_docks/: driver.sh  mysql-serv  pg-serv  pulsar-serv  redis-serv  serv-base
shjobs/: demo.sh  locks.sh
trojan/: Dockerfile  readme.md
trojan/client/: start_trojan.py
trojan/image/: Dockerfile  install.sh
trojan/nginx/: mars.missingjs.com
trojan/stage01/: Dockerfile  build.sh
trojan/stage02/: .dockerignore  Dockerfile  _setup_env.sh  build.sh  run.sh
trojan/stage02/trojan-deploy/: entry-point.sh  install.sh
trojan/stage02/trojan-deploy/nginx/: default
trojan/version1/: _setup_env.sh  build.sh  cert.sh  control.sh  readme.md
trojan/version2/: .gitignore  _setup_env.sh  cert.sh  common.sh  cron-setup.sh  findweb.py  generate.sh  readme.md  service.sh  webcont.sh
trojan/version2/example/: server.json-example
trojan/version2/monitor/: .dockerignore  .gitignore  Dockerfile  app.py  lint.sh  pyproject.toml
trojan2/: .gitignore  _setup_env.sh  generate.sh  readme.md
