[project]
name = "monitor"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi",
    "uvicorn",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
extend-select = ["E501"]

[tool.mypy]
python_version = "3.14"
files = ["."]
exclude = ["^\\.venv/"]
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
enable_error_code = [
    "explicit-override",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-expr",
    "truthy-bool",
    "unused-awaitable",
]
